components/nodejs-component/base/.tekton/build-webhook-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    appstudio.openshift.io/application: e2e-nodejs
    appstudio.openshift.io/component: nodejs-component
    build.appstudio.openshift.io/build: "true"
    build.appstudio.openshift.io/type: build
    build.appstudio.openshift.io/version: "0.1"
    pipelines.appstudio.openshift.io/type: build
  creationTimestamp: null
  name: elnodejs-component
  namespace: e2e-demo-ceye
spec:
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: el-nodejs-component
    weight: null
status: {}
